<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="50dp"
    android:background="#FFFFFF">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="124dp"
        android:layout_height="108dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/profile_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:shapeAppearanceOverlay="@style/CircleImage" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/profile_role"
        android:textColor="#4CAF50"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_email"
        android:layout_marginTop="12dp"
        android:textColor="#2196F3"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#4E4C4C"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/viewContactsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_contacts"
        android:background="#4BA7CE"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:padding="12dp" />
</LinearLayout>
